--- a/Html/Projects.html
+++ b/Html/Projects.html
@@ -88,10 +88,10 @@
 
    <div class="col-lx-6  col-lg-6 col-md-12  col-sm-12 col-xs-12">
         
-        <div class="jumbotron  white">
+        <div class="jumbotron  white" >
 
-        <div class="projectImage">
-           <img src="..//Images/Clientside.png"  height="200" width="500"  class="img-fluid" alt="Client Side">   
+        <div class="projectImage" id="two">
+          <!-- <img src="..//Images/Clientside.png"  height="200" width="500"  class="img-fluid" alt="Client Side" >-->
          </div>
       </div>
 
