--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
     <div class="about">
       <p>Hello, My name is Wisterdy Alcida </p>
-      <p>Welcome to my Online Developer Porfolio</p>
+      <p>Welcome to my Online Developer Portfolio</p>
       <p>Click on about: to see current technical skills</p>
       <p>Click on Project: to see Softwares/UX Projects</p>
       <p>Click on contact: If you would like to contact me or have any questions </p>
@@ -58,10 +58,14 @@
 </div>
 
 <div class="row mainlogo">
-
+   
 	<div class="col-lx-12  col-lg-12 col-md-12  col-sm-12 ">
 		
-		<div class="logo"><p class="word"> Wisterdy Alcida </p></div>
+		<div class="logo">
+       
+      <p class="word"> Wisterdy Alcida </p>
+      <h1> Click </h1>
+    </div>
 		<!--about icon image div container-->
 
 	</div>
