--- a/Html/About.html
+++ b/Html/About.html
@@ -12,6 +12,7 @@
 
 <link rel='icon' href="../Images/favicon.ico" type="image/ico">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -30,10 +31,10 @@
    
    <ul class="navbar-nav ml-auto">
 
-      <li class="nav-item"><a class="nav-link" href="..//index.html">Home</a></li>
-       <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="Projects.html">Projects</a></li>
-       <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
+      <li class="nav-item"><a class="nav-link" href="..//index.html">Home<i class="fa fa-home"></i></a></li>
+       <li class="nav-item"><a class="nav-link" href="#">About <i class="fa fa-user"></i></a></li>
+      <li class="nav-item"><a class="nav-link" href="Projects.html">Projects <i class="fa fa-folder"></i></a></li>
+       <li class="nav-item"><a class="nav-link" href="Contact.html">Contact <i class="fa fa-envelope"></i></a></li>
 
    </ul>
 
