--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet"  type="text/css"   href="CSS/design.css" />
 <meta name="viewport" content="width=device-width,intial-scale=1.0">
 <link rel="stylesheet"  type="text/css"   href="CSS/bootstrap.css" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <title>Wisterdy Alcida Porfolio 2020</title>
 
 
@@ -27,10 +28,10 @@
    
    <ul class="navbar-nav ml-auto">
 
-   		<li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-      <li class="nav-item"><a class="nav-link" href="Html/About.html">About</a></li>
-   		<li class="nav-item"><a class="nav-link" href="Html/Projects.html">Projects</a></li>
-   		<li class="nav-item"><a class="nav-link" href="Html/Contact.html">Contact</a></li>
+   		<li class="nav-item"><a class="nav-link" href="#">Home <i class="fa fa-home"></i></a></li>
+      <li class="nav-item"><a class="nav-link" href="Html/About.html">About <i class="fa fa-user"></i></a></li>
+   		<li class="nav-item"><a class="nav-link" href="Html/Projects.html">Projects <i class="fa fa-folder"></i></a></li>
+   		<li class="nav-item"><a class="nav-link" href="Html/Contact.html">Contact <i class="fa fa-envelope"></i></a></li>
 
    </ul>
 
