notice react update projects

--- a/Html/Projects.html
+++ b/Html/Projects.html
@@ -292,6 +292,19 @@
   </div>
 </div>
 
+<!--Top panel React Projects-->
+  <div class="row">
+     <div class="col-lx-12  col-lg-12 col-md-12  col-sm-12 col-xs-12 ">
+      <div class="section bg-dark"> <h1> React Projects </h1> </div>
+
+      <div class="jumbotron">
+          <h1 id="comming"> Comming Soon </h1>
+      </div>
+
+     </div>
+
+   </div>
+
 <!--page Footer section-->
 <div class="row">
      <div class="col-lx-12  col-lg-12 col-md-12  col-sm-12 col-xs-12 ">
