--- a/Html/Projects.html
+++ b/Html/Projects.html
@@ -102,7 +102,7 @@
     
 
         <div class="jumbotron ">
-          <p>This application a SQL Client GUI Project I used the Java frame layout as the front end of the application and it have a connection to a backend Mysql database that give the root user the privilege to execute any select or update query, while only given client user's the functionality of only using select query command.<p>
+          <p>This application is an SQL Client GUI Project I used the Java frame layout to create the GUI interface of the application and the application have a connection to a backend Mysql database that give the root user the privilege to execute any select or update query, while only given client user's the functionality of only using select query command.<p>
       <p>Technical Skilled:</p>
         <ul class="skilled">
           <li>Java GUI</li>
@@ -280,7 +280,7 @@
     
 
         <div class="jumbotron ">
-          <p>Artificial Intelligence for Computer Games project help create a 2D Pixel art platform game with 2 other classmates using Unity Engine. My Task in the project was character design, level, Animation, and preparing asset with colliders for the Programming sections.While Programming achieved by Patrick and Orrett.<p> 
+          <p>Artificial Intelligence for Computer Games project help create a 2D Pixel art platform game with 2 other classmates using Unity Engine. My Task in the project was character design, level, Animation, and preparing asset with colliders for the Programming sections.While the programming was completed by Patrick and Orrett.<p> 
       <p>Technical Skilled:</p>
         <ul class="skilled">
            <li>Unity</li>
