add styling and few updates .

--- a/Html/About.html
+++ b/Html/About.html
@@ -75,6 +75,9 @@
                  <li>Boostrap</li>
                  <li>JDBC</li>
                  <li>JSP</li>
+                 <li>React</li>
+                 <li>React Native </li>
+                 <li> Unity C# </li>
                </ul>
              </div>
 
@@ -96,6 +99,11 @@
                <li>Git</li>
                <li>Github</li>
                <li>Oracle VM</li>
+               <li> Visual Studio Code </li>
+               <li>Amazon AWS Amplify </li>
+               <li> Node js </li>
+               <li>Yarn & Npm</li> 
+
           </ul>
 
         </div>
