--- a/Html/Contact.html
+++ b/Html/Contact.html
@@ -1,83 +1,103 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
-<head> 
-<meta charset="utf-8" />
-<link rel="stylesheet"  type="text/css"   href="..//CSS/design.css" />
-<link rel="stylesheet"  type="text/css"   href="..//CSS/bootstrap.css" />
-<meta name="viewport" content="width=device-width,intial-scale=1.0">
-<title>Wisterdy Alcida Porfolio 2020</title>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="..//CSS/design.css" />
+    <link rel="stylesheet" type="text/css" href="..//CSS/bootstrap.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Wisterdy Alcida Porfolio 2020</title>
 
+    <link rel="icon" href="../Images/favicon.ico" type="image/ico" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
-<link rel='icon' href="../Images/favicon.ico" type="image/ico">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+  </head>
 
-<body>
-<div class="container-fluid">
+  <body>
+    <div class="container-fluid">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+        <a
+          class="navbar-brand"
+          href="https://github.com/Wisterdy"
+          target="_blank"
+        >
+          Wisterdy Alcida <i class="fa fa-github"></i>
+        </a>
 
+        <button
+          class="navbar-toggler btn-secondary"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navcollapse"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navcollapse">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="..//index.html"
+                >Home<i class="fa fa-home"></i
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="About.html"
+                >About <i class="fa fa-user"></i
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Projects.html"
+                >Projects <i class="fa fa-folder"></i
+              ></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                >Contact<i class="fa fa-envelope"></i
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
-
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-
- <a class="navbar-brand" href="#">Wisterdy Alcida </a>
-
- <button class="navbar-toggler btn-secondary" type="button" data-toggle="collapse" data-target="#navcollapse">
-  <span class="navbar-toggler-icon"></span>
-</button>
- <div class="collapse navbar-collapse" id="navcollapse">
-   
-   <ul class="navbar-nav ml-auto">
-
-      <li class="nav-item"><a class="nav-link" href="..//index.html">Home<i class="fa fa-home"></i></a></li>
-       <li class="nav-item"><a class="nav-link" href="About.html">About <i class="fa fa-user"></i></a></li>
-      <li class="nav-item"><a class="nav-link" href="Projects.html">Projects <i class="fa fa-folder"></i></a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Contact<i class="fa fa-envelope"></i></a></li>
-
-   </ul>
-
- </div>
-  </nav>
-
-   <div class="row">
-     <div class="col-lx-12  col-lg-12 col-md-12  col-sm-12 col-xs-12 ">
-      
-      <div class="contact-info">
-
-         <a class="btn bg-dark" href="mailto:Wisterdya@knights.ucf.edu">Email Me</a> 
-
+      <div class="row">
+        <div class="col-lx-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div class="contact-info">
+            <a class="btn bg-light" href="mailto:wisterdyalcidadev@gmail.com"
+              >Email Me</a
+            >
+          </div>
+        </div>
       </div>
 
+      <div class="row">
+        <div class="col-lx-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <div class="Thanks">
+            <p>Thanks for checking out my Developer Online Portfolio.</p>
+          </div>
+        </div>
       </div>
 
-   </div>
+      <!--END of container div-->
+    </div>
 
-   <div class="row">
-     <div class="col-lx-12  col-lg-12 col-md-12  col-sm-12 col-xs-12 ">
-      
-      <div class="Thanks">
-
-        <p> Thanks for checking out my Developer Online Portfolio. </p>
-
-      </div>
-
-      </div>
-
-   </div>
-
-<!--END of container div-->
-
- </div>
- 
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-</body>
-
-
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  </body>
 </html>
