--- a/index.html
+++ b/index.html
@@ -1,93 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
-<meta charset="utf-8" />
-<link rel="stylesheet"  type="text/css"   href="CSS/design.css" />
-<meta name="viewport" content="width=device-width,intial-scale=1.0">
-<link rel="stylesheet"  type="text/css"   href="CSS/bootstrap.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<title>Wisterdy Alcida Porfolio 2020</title>
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="CSS/design.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="CSS/bootstrap.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <title>Wisterdy Alcida Porfolio 2020</title>
 
+    <link rel="icon" href="../Images/favicon.ico" type="image/ico" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  </head>
 
-<link rel='icon' href="../Images/favicon.ico" type="image/ico">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-</head>
+  <body>
+    <div class="container-fluid">
+      <div class="header">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+          <a
+            class="navbar-brand"
+            href="https://github.com/Wisterdy"
+            target="_blank"
+          >
+            Wisterdy Alcida <i class="fa fa-github"></i>
+          </a>
 
-<body>
-<div class="container-fluid">
+          <button
+            class="navbar-toggler btn-secondary"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navcollapse"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navcollapse">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Home <i class="fa fa-home"></i></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Html/About.html"
+                  >About <i class="fa fa-user"></i
+                ></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Html/Projects.html"
+                  >Projects <i class="fa fa-folder"></i
+                ></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Html/Contact.html"
+                  >Contact <i class="fa fa-envelope"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <div class="row maincontent">
+        <div class="col-lx-12 col-lg-12 col-md-12 col-sm-12">
+          <main>
+            <div class="about">
+              <p>Hello, My name is Wisterdy Alcida</p>
+              <p>I guess I Code ...</p>
+              <p>Welcome to my Online Developer Portfolio</p>
+              <p>Click on about: Technical Skills</p>
+              <p>Click on Project: To see Softwares/UX Projects</p>
+              <p>
+                Click on contact: If you would like to contact me or have any
+                questions
+              </p>
+            </div>
+          </main>
+        </div>
+      </div>
 
-<div class="header">
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
-
- <a class="navbar-brand" href="#">Wisterdy Alcida </a>
-
- <button class="navbar-toggler btn-secondary" type="button" data-toggle="collapse" data-target="#navcollapse">
- 	<span class="navbar-toggler-icon"></span>
-</button>
- <div class="collapse navbar-collapse" id="navcollapse">
-   
-   <ul class="navbar-nav ml-auto">
-
-   		<li class="nav-item"><a class="nav-link" href="#">Home <i class="fa fa-home"></i></a></li>
-      <li class="nav-item"><a class="nav-link" href="Html/About.html">About <i class="fa fa-user"></i></a></li>
-   		<li class="nav-item"><a class="nav-link" href="Html/Projects.html">Projects <i class="fa fa-folder"></i></a></li>
-   		<li class="nav-item"><a class="nav-link" href="Html/Contact.html">Contact <i class="fa fa-envelope"></i></a></li>
-
-   </ul>
-
- </div>
-  </nav>
-
-</div>
-<div class="row maincontent">
-
-  <div class="col-lx-12  col-lg-12 col-md-12  col-sm-12 ">
-    <main>
-
-    
-    <div class="about">
-      <p>Hello, My name is Wisterdy Alcida </p>
-      <p>Welcome to my Online Developer Portfolio</p>
-      <p>Click on about: to see current technical skills</p>
-      <p>Click on Project: to see Softwares/UX Projects</p>
-      <p>Click on contact: If you would like to contact me or have any questions </p>
-
+      <div class="row mainlogo">
+        <div class="col-lx-12 col-lg-12 col-md-12 col-sm-12">
+          <div class="logo">
+            <video autoplay muted loop class="background-video">
+              <source src="../Images/ProfileVideo.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+            <p class="word">WISTERDY ALCIDA <br />Senior Software Engineer</p>
+            <h1>Click</h1>
+          </div>
+          <!--about icon image div container not using this update version background video -->
+        </div>
+      </div>
     </div>
-   
-    </main>
-  </div>
-</div>
 
-<div class="row mainlogo">
-   
-	<div class="col-lx-12  col-lg-12 col-md-12  col-sm-12 ">
-		
-		<div class="logo">
-       
-      <p class="word"> Wisterdy Alcida </p>
-      <h1> Click </h1>
-    </div>
-		<!--about icon image div container-->
-
-	</div>
-</div>
-
-</div>
-
-
-
-
-
-<script src="Script/Api.js"></script>
- <script src="js/boostrap.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-
-</body>
-
-
+    <script src="Script/Api.js"></script>
+    <script src="js/boostrap.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  </body>
 </html>
