--- a/index.html
+++ b/index.html
@@ -80,7 +80,13 @@
       <div class="row mainlogo">
         <div class="col-lx-12 col-lg-12 col-md-12 col-sm-12">
           <div class="logo">
-            <video autoplay muted loop class="background-video">
+            <video
+              autoplay
+              muted
+              loop
+              class="background-video"
+              poster="../Images/icon.jpg"
+            >
               <source src="../Images/ProfileVideo.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
