--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               muted
               loop
               class="background-video"
-              poster="../Images/icon.jpg"
+              poster="../Images/Icon.jpg"
             >
               <source src="../Images/ProfileVideo.mp4" type="video/mp4" />
               Your browser does not support the video tag.
