icon and alt video

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
               class="background-video"
               poster="../Images/Icon.jpg"
             >
+              <source src="../Videos/ProfileVideo.webm" type="video/webm" />
               <source src="../Images/ProfileVideo.mp4" type="video/mp4" />
               Your browser does not support the video tag.
             </video>
