--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
               loop
               class="background-video"
               poster="../Images/Icon.jpg"
+              preload="auto"
             >
               <source src="../Videos/ProfileVideo.webm" type="video/webm" />
               <source src="../Images/ProfileVideo.mp4" type="video/mp4" />
